--- a/www/index.html
+++ b/www/index.html
@@ -18,10 +18,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
   <script src="https://apis.google.com/js/api.js"></script>
-<link rel="stylesheet" href="styles.347aab236d654b3345e3.css"></head>
+</head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.0bda39a9f7e8fde60f86.js"></script><script type="text/javascript" src="polyfills.2dbbe6542a717efec1a4.js"></script><script type="text/javascript" src="cordova.be00a3c9f5babbb22844.js"></script><script type="text/javascript" src="main.cf48870a8fc47507d3e1.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="cordova.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 
 </html>
