--- a/www/index.html
+++ b/www/index.html
@@ -18,10 +18,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
   <script src="https://apis.google.com/js/api.js"></script>
-<link rel="stylesheet" href="styles.24122b624a01b696e0f5.css"></head>
+</head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.b7b69522c70b3f9f0f23.js"></script><script type="text/javascript" src="polyfills.8cffc9709d3bb3e72d8a.js"></script><script type="text/javascript" src="cordova.be00a3c9f5babbb22844.js"></script><script type="text/javascript" src="main.0db8e413446b406f3312.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="cordova.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 
 </html>
