--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <meta name="google-site-verification" content="r0KD3lEhyiDD7Ze0ez5oBuSRieNtDXSC0BOZ0m2VqJ8" />
+  
   <meta charset="utf-8" />
   <title>5678!</title>
 
