--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
   <script src="https://apis.google.com/js/api.js"></script>
-</head>
+<link rel="stylesheet" href="styles.9c5118ef6289880eb963.css"></head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="cordova.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="runtime.60b5eac734a1757cb00e.js"></script><script type="text/javascript" src="polyfills.8cffc9709d3bb3e72d8a.js"></script><script type="text/javascript" src="cordova.be00a3c9f5babbb22844.js"></script><script type="text/javascript" src="main.a164e5ed19d80299d2e7.js"></script></body>
 
 </html>
